# grpc_auto_package_generator

./: CMakeLists.txt  README.md  install_packages.sh
protos/: common.proto
protos/example1/: example_shm1.proto
protos/example2/: example_shm2.proto
